--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">De beste site van Nederland</h1>
+      <h1 id="hoofdtitel" class="belangrijk">Films</h1>
     </header>
 
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+        <li><a href="overmij.html">Geschiedenis</a></li>
+        <li><a href="info.html">Soorten Films</a></li>
+        <li><a href="info2.html">Film Favorieten</a></li>
       </ul>
     </nav>
 
@@ -27,7 +28,7 @@
       <h2>Lorem Ipsum</h2>
 
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
+        <img class="item-plaatje" src="afbeeldingen/American-Cinema-main-fig1.jpeg" alt="lorem ipsum">
         <p class="item-tekst">
           <a href="http://nu.nl">Klik hier</a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
           ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
@@ -42,7 +43,7 @@
       </div>
 
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
+        <img class="item-plaatje" src="afbeeldingen/cinema.webp" alt="lorem ipsum">
         <p class="item-tekst">
           Etiam rhoncus. Maecenas tempus, tellus eget
           condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
