--- a/info.html
+++ b/info.html
@@ -12,14 +12,15 @@
   <div class="page">
 
     <header>
-      <h1>Informatie overal!</h1>
+      <h1>Soorten Films</h1>
     </header>
 
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
+        <li><a href="overmij.html">Geschiedenis</a></li>
+        <li><a class="active" href="info.html">Soorten Films</a></li>
+        <li><a href="info2.html">Film Favorieten</a></li>
       </ul>
     </nav>
 
