--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+<body id="pagina3">
   <div class="page">
 
     <header>
@@ -17,10 +17,10 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Geschiedenis</a></li>
-        <li><a class="active" href="info.html">Soorten Films</a></li>
-        <li><a href="info2.html">Film Favorieten</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="overmij.html">GESCHIEDENIS</a></li>
+        <li><a class="active" href="info.html">SOORTEN FILMS</a></li>
+        <li><a href="info2.html">FILM FAVORIETEN</a></li>
       </ul>
     </nav>
 
@@ -32,6 +32,7 @@
         toepassingsgebieden het verschillend gebruiken. Informatie wordt overgedragen via communicatie. Wie een
         boodschap overdraagt is de zender en wie de boodschap ontvangt is de ontvanger. Meestal is er
         tweerichtingsverkeer.</p>
+        <img class="bottom-plaatje" src="afbeeldingen/cool_lint2.png">
     </main>
 
     <footer>
