--- a/info2.html
+++ b/info2.html
@@ -8,24 +8,25 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+<body id="pagina4">
   <div class="page">
 
     <header>
-      <h1>Informatie overal.</h1>
+      <h1>Film Favorieten</h1>
     </header>
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Geschiedenis</a></li>
-        <li><a href="info.html">Soorten Films</a></li>
-        <li><a class="active" href="info2.html">Film Favorieten</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="overmij.html">GESCHIEDENIS</a></li>
+        <li><a href="info.html">SOORTEN FILMS</a></li>
+        <li><a class="active" href="info2.html">FILM FAVORIETEN</a></li>
       </ul>
     </nav>
 
     <main>
-      <p>blablablablablablablablablablablablablablablablblalblablabl</p>
+      <p>blablablablablablablablablablablablablablablablblalblablabla</p>
+      <img class="bottom-plaatje" src="afbeeldingen/cool_lint2.png">
     </main>
 
     <footer>
