--- a/info.html
+++ b/info.html
@@ -27,13 +27,9 @@
     <main>
       <p class="textpagina3">
         <br>
-        <strong>1.  Actie-avonturenfilms</h2></strong> <br>
-        <img class="actie-plaatje" src="afbeeldingen/avengers.webp">
-         <br>De laatste jaren zijn veel actie-/avonturenfilms verschenen. De zalen lopen vol voor films zoals Pirates of the Caribbean, The Lord of the Rings en Harry Potter. Echte actiefilms zoals Batman The Dark Knight, The Avengers en Captain America doen het ook goed. Actie- en avonturenfilms zijn momenteel het meest populaire filmgenre.
-         <br>
-         <br>
-         <br>
-         <br>
+        <strong>1.  Actie-avonturenfilms</h2></strong> <img class="actie-plaatje" src="afbeeldingen/avengers.webp">
+         <p class="pagina3tekst">De laatste jaren zijn veel actie-/avonturenfilms verschenen. De zalen lopen vol voor films zoals Pirates of the Caribbean, The Lord of the Rings en Harry Potter. Echte actiefilms zoals Batman The Dark Knight, The Avengers en Captain America doen het ook goed. Actie- en avonturenfilms zijn momenteel het meest populaire filmgenre.</p>
+         
          <strong>2. (Romantische) Komedie</strong>
          <img class="actie-plaatje" src="afbeeldingen/10 things.jpeg">
          <br>Een film moet zorgen voor vermaak en welk gerne leent zich daar beter toe dan een (romantische) komedie? Een gezellige avond op de bank en even lekker lachen samen met je partner, vrienden of familie, dat wordt door bijna iedereen wel gewaardeerd. Niet voor niets staat de komedie dan ook hoog in deze top 5. Populaire komedies waren The Sausage Party, Make Happy, Deadpool en Captain Fantastic. Ook de Nederlandse romantische komedies doen het in eigen land goed. Voorbeelden daarvan zijn Soof, Gooische Vrouwen, Mannenharten en De Surprise.
@@ -41,6 +37,7 @@
          <br>
          <br>
          <strong>3. Horrors/Thrillers</strong>
+         <img class="actie-plaatje" src="afbeeldingen/itcreepy.webp">
          <br>Wat is er nu leuker dan af en toe even de adrenaline door je lijf te voelen gaan tijdens het kijken van een bloedstollende thriller of horrorfilm? De film Scream is een oud, maar klassiek voorbeeld en ook de Saw-films zijn berucht in het derde populairste filmgenre. Horrorfilms en thrillers lenen zich net zoals komedies uitstekend om samen met je partner of vrienden te kijken. Populaire recente films uit dit genre zijn The Conjuring, The Forest en Lights Out. Enkele klassieke Nederlandse horrorfilms zijn De Lift en wat recenter Sint en Kristen.
          <br>
          <br>
@@ -56,10 +53,6 @@
 
     </main>
 
-    <footer>
-      <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
-    </footer>
 
   </div>
 </body>
