--- a/overmij.html
+++ b/overmij.html
@@ -14,7 +14,7 @@
     
 
     <header>
-      <h1>Geschiedenis van Film</h1>
+      <h1>GESCHIEDENIS</h1>
     </header>
 
     <nav>
@@ -23,6 +23,7 @@
         <li><a class="active" href="overmij.html">GESCHIEDENIS</a></li>
         <li><a href="info.html">SOORTEN FILMS</a></li>
         <li><a href="info2.html">FILM FAVORIETEN</a></li>
+        <li><a href="quiz.html">QUIZ</a></li>
       </ul>
     </nav>
 
