--- a/quiz.html
+++ b/quiz.html
@@ -8,11 +8,11 @@
   <meta charset="UTF-8" />
 </head>
 
-<body id="pagina4">
+<body id="pagina5">
   <div class="page">
 
     <header>
-      <h1>FILM FAVORIETEN</h1>
+      <h1>QUIZ</h1>
     </header>
 
     <nav>
@@ -20,13 +20,15 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="overmij.html">GESCHIEDENIS</a></li>
         <li><a href="info.html">SOORTEN FILMS</a></li>
-        <li><a class="active" href="info2.html">FILM FAVORIETEN</a></li>
-        <li><a href="quiz.html">QUIZ</a></li>
+        <li><a href="info2.html">FILM FAVORIETEN</a></li>
+        <li><a class="active" href="quiz.html">QUIZ</a></li>
       </ul>
     </nav>
 
     <main>
-      <p>blablablablablablablablablablablablablablablablblalblablabla</p>
+      <p>blablablablablablablablablablablablablablablablblalblablabla
+        quiz
+      </p>
       
     </main>
 
