--- a/info2.html
+++ b/info2.html
@@ -26,7 +26,9 @@
     </nav>
 
     <main>
-      <p>blablablablablablablablablablablablablablablablblalblablabla</p>
+      <p>
+        <img src="afbeeldingen/"
+      </p>
       
     </main>
 
